Bug 611795 - Repeated messages in the Web Console should be collapsed into one; f=mihai.sucan r=sdwilsh,dao a=beltzner
UltraBlame original commit: c60c4769c89afec0e8574008491335d496efaa7b

--- a/toolkit/themes/gnomestripe/global/webConsole.css
+++ b/toolkit/themes/gnomestripe/global/webConsole.css
@@ -37,6 +37,7 @@
 
 
 
+
 .hud-box {
   border-bottom: 1px solid #aaa;
   text-shadow: none;
@@ -94,6 +95,25 @@
 
 .webconsole-msg-url {
   margin: 0 6px;
+}
+
+
+.webconsole-msg-repeat {
+  margin: 2px 0;
+  padding-left: 4px;
+  padding-right: 4px;
+  width: 1em;
+  color: white;
+  background-color: red;
+  border-radius: 40px;
+  font: message-box;
+  font-size: 10px;
+  font-weight: 600;
+}
+
+
+.webconsole-msg-repeat[value="1"] {
+  display: none;
 }
 
 .webconsole-location {
